[project]
name = "sam-tss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hydra-core==1.3.2",
    "iopath>=0.1.10",
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
    "setuptools<70",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "visdom>=0.2.4",
    "wheel>=0.46.3",
]
